# xxxlinxxx

./: .firebaserc  .gitignore  Codec2Bridge.kt  PcmAudioEngine.kt  README.md  build.gradle.kts  firestore.rules  settings.gradle.kts
app/: build.gradle.kts  google-services.json
app/src/androidTest/java/com/example/xxxlinkxxxclaude/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  codec2_bridge.cpp  native-lib.cpp
app/src/main/cpp/codec2/: README_data.md
app/src/main/cpp/codec2/cmake/: version.h.in
app/src/main/cpp/codec2/codec2/: desktop.ini  version.h
app/src/main/java/com/example/p2pcodec2/: Codec2Bridge.kt  XxxFirebaseMessagingService.kt
app/src/main/java/com/example/xxxlinkxxxclaude/: MainActivity.kt
app/src/main/res/drawable/: bg_add_contact_fab.xml  ic_copy_24.xml  ic_phone_24.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/xxxlinkxxxclaude/: ExampleUnitTest.kt
functions/: index.js  package-lock.json  package.json
